<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mr_Potato_Head</string>
    <string name="action_settings">Settings</string>
    <string name="Exit_app">Exit</string>
    <!-- Body elements-->
    <string name="arms">Arms</string>
    <string name="ears">Ears</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="eyes">Eyes</string>
    <string name="glasses">Glasses</string>
    <string name="hat">Hat</string>
    <string name="mouth">Mouth</string>
    <string name="mustache">Mustache</string>
    <string name="nose">Nose</string>
    <string name="shoes">Shoes</string>

    <string name="checkboxText">Check the checkbox to apply bodypart</string>



</resources>
