<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    style="android:windowBackground">

    <TextView
        android:text="Mr. Potato Head"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoBody"
        android:src="@drawable/body"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoArms"
        android:src="@drawable/arms"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoEars"
        android:src="@drawable/ears"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoEyebrows"
        android:src="@drawable/eyebrows"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoEyes"
        android:src="@drawable/eyes"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoGlasses"
        android:src="@drawable/glasses"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoHat"
        android:src="@drawable/hat"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoMouth"
        android:src="@drawable/mouth"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoMustache"
        android:src="@drawable/mustache"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoShoes"
        android:src="@drawable/shoes"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potatoNose"
        android:src="@drawable/nose"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_text"
        android:text="@string/checkboxText"
        android:layout_below="@+id/potatoBody"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/checkbox_text">
        <CheckBox
            android:id="@+id/checkbox_eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eyes"
            android:onClick="onCheckboxClicked"
            android:tag="potatoMustache"/>
        <CheckBox
            android:id="@+id/checkbox_eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eyebrows"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/checkbox_ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ears"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/checkbox_shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoes"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/checkbox_glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glasses"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/checkbox_arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arms"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/checkbox_hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hat"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/checkbox_mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mouth"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/checkbox_mustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mustache"
            android:onClick="onCheckboxClicked"/>
        <CheckBox
            android:id="@+id/checkbox_nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nose"
            android:onClick="onCheckboxClicked"/>
        </LinearLayout>
</RelativeLayout>
</ScrollView>